--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>KnowNestwa Privacy Policy | United States</title>
-    <meta name="description" content="Privacy Policy for KnowNestwa, outlining how we collect, use, and protect your information in compliance with U.S. laws.">
+    <title>FortisparVault Privacy Policy | United States</title>
+    <meta name="description" content="Privacy Policy for FortisparVault, outlining how we collect, use, and protect your information in compliance with U.S. laws.">
     <style>
         :root {
             --primary-color: #2c3e50;
@@ -12,6 +12,11 @@
             --text-color: #333;
             --light-gray: #f9f9f9;
             --border-color: #ddd;
+        }
+        * {
+            box-sizing: border-box;
+            margin: 0;
+            padding: 0;
         }
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -98,14 +103,14 @@
 </head>
 <body>
     <header>
-        <h1>KnowNestwa Privacy Policy</h1>
+        <h1>FortisparVault Privacy Policy</h1>
         <p class="effective-date"><strong>Effective Date:</strong> January 1, 2024 | <strong>Last Updated:</strong> January 1, 2024</p>
     </header>
 
     <main>
         <section id="introduction">
             <h2>1. Introduction</h2>
-            <p>Welcome to KnowNestwa ("we," "us," or "our"). This Privacy Policy explains how we collect, use, disclose, and safeguard your information when you use our mobile application, website, or related services (collectively, the "Services"). We are committed to protecting your privacy in accordance with U.S. federal and state laws, including the California Consumer Privacy Act (CCPA) and other applicable regulations.</p>
+            <p>Welcome to FortisparVault ("we," "us," or "our"). This Privacy Policy explains how we collect, use, disclose, and safeguard your information when you use our mobile application, website, or related services (collectively, the "Services"). We are committed to protecting your privacy in accordance with U.S.应用 federal and state laws, including the California Consumer Privacy Act (CCPA) and other applicable regulations.</p>
             <p>By accessing or using the Services, you agree to the terms of this Privacy Policy. If you do not agree, please do not use our Services. If you are located outside the United States, please note that your information may be transferred to and processed in the U.S., where our servers are located.</p>
         </section>
 
@@ -133,7 +138,7 @@
 
         <section id="how-we-use-information">
             <h2>3. How We Use Your Information</h2>
-            <p>We use your information for the following purposes, all in service of providing and improving the KnowNestwa experience:</p>
+            <p>We use your information for the following purposes, all in service of providing and improving the FortisparVault experience:</p>
             <ul>
                 <li><strong>Service Delivery:</strong> To operate core features (e.g., account management, content sharing), process transactions, and sync data across devices.</li>
                 <li><strong>Personalization:</strong> To tailor content recommendations, UI/UX elements, and notifications based on your usage patterns.</li>
@@ -171,7 +176,7 @@
         </section>
 
         <section id="childrens-privacy">
-            <h2>7. Children’s Privacy</h2>
+            <h2>7. Children's Privacy</h2>
             <p>The Services are not intended for children under 13 years of age. We do not knowingly collect personal information from children under 13. If we learn we have collected such information, we will promptly delete it. Parents or guardians who believe their child has provided information should contact us at <span class="contact-email">ahmadalkong14@gmail.com</span>.</p>
         </section>
 
@@ -207,7 +212,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2024 KnowNestwa. All rights reserved.</p>
+        <p>&copy; 2024 FortisparVault. All rights reserved.</p>
     </footer>
 </body>
 </html>
